--- a/scenarioA/services/my-account/chooser-page-fr.html
+++ b/scenarioA/services/my-account/chooser-page-fr.html
@@ -209,7 +209,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
     <div class="col-md-6">
       <div class="alert alert-info hght-inhrt mrgn-bttm-0">
         <h2 class="h3">Ouvrir une session avec votre province :</h2>
-        <p>Les résidents de l’Albertapeuvent accéder à Mon dossier Service Canada en utilisant leur identité numérique provinciale (<a href="/MSCA-Prototype/scenarioA/services/my-account/province/privacy-notice-term-conditions-fr.html">MyAlberta Digital ID</a>).<br />
+        <p>Les résidents de l’Alberta peuvent accéder à Mon dossier Service Canada en utilisant leur identité numérique provinciale (<a href="/MSCA-Prototype/scenarioA/services/my-account/province/privacy-notice-term-conditions-fr.html">MyAlberta Digital ID</a>).<br />
           <br />
           <br />
         </p>
@@ -267,7 +267,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <ul class="list-unstyled row">
         <li class="col-md-4 mrgn-bttm-md"> <a href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/register-fr.html" class="btn btn-blue large-btn">
           <div class="icon-btn"><img src="/MSCBA-Prototype-NoNav/key-white.png" alt=""></div>
-          <div class="label-btn"><b>Inscription avec la CléG</b></div>
+          <div class="label-btn"><b>Inscription avec la CléGC</b></div>
           </a> </li>
         <li class="col-md-4 mrgn-bttm-md"> <a href="/MSCA-Prototype/scenarioA/services/my-account/sign-in-partner/register-fr.html" class="btn btn-red large-btn">
           <div class="icon-btn"><img src="/MSCBA-Prototype-NoNav/bank-white.png" alt=""></div>
