--- a/scenarioA/services/my-account/GCKey/sign-up-step-1-fr.html
+++ b/scenarioA/services/my-account/GCKey/sign-up-step-1-fr.html
@@ -124,8 +124,8 @@
      </p>
      <form autocomplete="off" action="/j/fra/rg?execution=e1s1" method="post">
       <div class="form-group form-buttons">
-       <div style="text-align:center;"> <a class="btn btn-default" href= "/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-up-step-2-fr.html">I accept</a>
-                  <input type="submit" name="_eventId_cancel" id="Cancel" value="I decline" title="Cancel the process" class="btn btn-default" style="margin-left:auto; margin-right:auto"/>
+       <div style="text-align:center;"> <a class="btn btn-default" href= "/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-up-step-2-fr.html">J'accepte</a>
+                  <input type="submit" name="_eventId_cancel" id="Cancel" value="Je refuse" title="Cancel the process" class="btn btn-default" style="margin-left:auto; margin-right:auto"/>
        </div>
       </div>
      </form>
