--- a/scenarioA/services/my-account/R&A/confirm-my-profile-madi-fr.html
+++ b/scenarioA/services/my-account/R&A/confirm-my-profile-madi-fr.html
@@ -240,13 +240,9 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 
             <h2 class="page-header">Informations de l'utilisateur</h2>
 <dl>
-<dt>Date de naissance</dt>
-<dd>1999-01-01</dd>
-<dt>Code d'accès de l'assurance-emploi ou code d'accès personnel du Régime de pensions du Canada ou de la Sécurité de la vieillesse 
-</dt>
-<dd>*****</dd>
-<dt>Province ou territoire </dt>
-<dd>Ontario</dd>
+<dt>
+Nom de famille du parent à la naissance :</dt>
+<dd>Smith</dd>
 
 </dl>
 
