--- a/scenarioA/services/my-account/R&A/create-my-profile-madi-fr.html
+++ b/scenarioA/services/my-account/R&A/create-my-profile-madi-fr.html
@@ -255,7 +255,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 <div class="clearfix"></div>
 <div class="row mrgn-tp-sm mrgn-bttm-sm">
 <div class="col-md-6">
-<label for="piaddressline1">Date de naissance :</label>
+<label for="piaddressline1">Nom de famille du parent à la naissance : (Indiquer le nom de famille d'un seul parent à la naissance)</label>
 </div>
 <div class="col-md-6">
 <div class="float-left">
@@ -270,53 +270,8 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 
 </div>
 <div class="clearfix"></div>
-<div class="row mrgn-tp-sm mrgn-bttm-sm">
-<div class="col-md-6">
-<label for="piaddressline2">Code d'accès de l'assurance-emploi ou code d'accès personnel du Régime de pensions du Canada ou de la Sécurité de la vieillesse :</label>
-</div>
-<div class="col-md-6">
-<div class="float-left">
-<input type="text" id="piaddressline2" name="piaddressline2" class="form-control" value="" maxlength="100" size="30" autocomplete="off"/>
-
-</div>
-<div class="float-right">
-
-</div>
-<div class="clearfix"></div>
-</div>
-
-</div>
-
-<div class="float-right">
 
 
-<div class="clearfix"></div>
-</div>
-
-<div class="clearfix"></div>
-<div class="row mrgn-tp-sm mrgn-bttm-sm">
-<div class="col-md-6">
-<label for="piprovincestate">Province ou territoire :</label>
-</div>
-<div class="col-md-6">
-<select id="piprovincestate" name="piprovincestate" class="form-control">
-<option value="">Choisissez une option</option>
-<option value="">&nbsp;</option>
-<option value="ON" >Ontario</option>
-<option value="QC" >Quebec</option>
-</select>
-</div>
-
-
-
-</div>
-<div class="clearfix"></div>
-</div>
-
-</div>
-<div class="clearfix"></div>
-
-<div class="clearfix"></div>
 </fieldset>
 	  
 					
