--- a/scenarioA/services/my-account/GCKey/sign-up-step-1-fr.html
+++ b/scenarioA/services/my-account/GCKey/sign-up-step-1-fr.html
@@ -21,7 +21,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <!--[if gte IE 9 | !IE ]><!-->
 	
-	<link rel="stylesheet" href="https://clegc-gckey.gc.ca/j/css/fuelux.min.c /ss"> 
+	<link rel="stylesheet" href="https://clegc-gckey.gc.ca/j/css/fuelux.min.css" /> 
 <link rel="shortcut icon" href="https://clegc-gckey.gc.ca/j/wet/assets/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" href="https://clegc-gckey.gc.ca/j/wet/css/wet-boew.min.css" />
 <link rel="stylesheet" href="https://clegc-gckey.gc.ca/j/wet/css/theme.min.css" />
