--- a/scenarioA/services/my-account/GCKey/register-fr.html
+++ b/scenarioA/services/my-account/GCKey/register-fr.html
@@ -481,11 +481,11 @@ Mon dossier Service Canada&nbsp;: Inscription avec la CléGC</h1>
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="/etc/clientlibs/granite/jquery.min.js"></script> 
-<script type="text/javascript" src="/etc/clientlibs/granite/utils.min.js"></script> 
-<script type="text/javascript" src="/etc/designs/canada/clientlib-publish.min.js"></script> 
+<script type="text/javascript" src="https://www.canada.ca/etc/clientlibs/granite/jquery.min.js"></script> 
+<script type="text/javascript" src="https://www.canada.ca/etc/clientlibs/granite/utils.min.js"></script> 
+<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/clientlib-publish.min.js"></script> 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
-<script src="/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script> 
-<script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script> 
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 </body>
 </html>
