--- a/scenarioA/services/my-account/sign-in-partner/register-fr.html
+++ b/scenarioA/services/my-account/sign-in-partner/register-fr.html
@@ -451,7 +451,7 @@ Mon dossier Service&nbsp;Canada&nbsp;: Inscription avec votre banque</h1>
     </div>
     <div class="gc-rprt-prblm-thnk gc-rprt-prblm-tggl hide">
         <h3>Merci de votre aide!</h3>
-<p>Vous ne recevrez pas de réponse. Pour toute question, <a href="https://www.canada.ca/fr/contact/index.html">contactez-nous</a>.</p>
+<p>Vous ne recevrez pas de réponse. Pour toute question, <a href="#">contactez-nous</a>.</p>
     </div>
 </div></div>
 </div>
@@ -494,24 +494,24 @@ Mon dossier Service&nbsp;Canada&nbsp;: Inscription avec votre banque</h1>
             <h2 class="wb-inv">À propos de ce site</h2>
             <ul>
               <li><a href="#">Médias sociaux</a></li>
-              <li><a href="/en/mobile.html">Applications mobiles</a></li>
+              <li><a href="#">Applications mobiles</a></li>
               <li><a href="#">À propos de Canada.ca</a></li>
               <li><a href="#">Avis</a></li>
               <li><a href="#">Confidentialité</a></li>
             </ul>
           </nav>
           <div class="col-xs-6 visible-sm visible-xs tofpg"> <a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a> </div>
-          <div class="col-xs-6 col-md-2 text-right"> <img src="/etc/designs/canada/wet-boew/assets/wmms-blk.svg" alt="Symbol of the Government of Canada"/> </div>
+          <div class="col-xs-6 col-md-2 text-right"> <img src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg" alt="Symbol of the Government of Canada"/> </div>
         </div>
       </div>
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="/etc/clientlibs/granite/jquery.min.js"></script> 
-<script type="text/javascript" src="/etc/clientlibs/granite/utils.min.js"></script> 
-<script type="text/javascript" src="/etc/designs/canada/clientlib-publish.min.js"></script> 
+<script type="text/javascript" src="https://www.canada.ca/etc/clientlibs/granite/jquery.min.js"></script> 
+<script type="text/javascript" src="https://www.canada.ca/etc/clientlibs/granite/utils.min.js"></script> 
+<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/clientlib-publish.min.js"></script> 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
-<script src="/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script> 
-<script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script> 
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 </body>
 </html>
