--- a/scenarioA/services/my-account/GCKey/sign-up-step-1-fr.html
+++ b/scenarioA/services/my-account/GCKey/sign-up-step-1-fr.html
@@ -19,12 +19,12 @@
 <meta name="dcterms.subject" title="scheme" content="Electronic government; Government Services" />
 <meta name="dcterms.language" title="ISO639-2" content="eng" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="https://clegc-gckey.gc.ca/j/css/fuelux.min.css">
 <!--[if gte IE 9 | !IE ]><!-->
 <link rel="shortcut icon" href="https://clegc-gckey.gc.ca/j/wet/assets/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" href="https://clegc-gckey.gc.ca/j/wet/css/wet-boew.min.css" />
 <link rel="stylesheet" href="https://clegc-gckey.gc.ca/j/wet/css/theme.min.css" />
 <link rel="stylesheet" href="https://clegc-gckey.gc.ca/j/css/gckey.css" />
-	<link rel="stylesheet" href="https://clegc-gckey.gc.ca/j/css/fuelux.min.css" />
 <!--<![endif]-->
 <!--[if lt IE 9]> 
 <link rel="shortcut icon" href="https://clegc-gckey.gc.ca/j/wet/assets/favicon.ico"/>
@@ -108,6 +108,7 @@
       </ul>
      </div>
     </div>
+
     <h1 id="wb-cont">Modalit&eacute;s et conditions d’utilisation</h1>
     <div class="row">
      <div class="col-md-8">
