--- a/scenarioA/services/my-account/GCKey/sign-up-step-4-fr.html
+++ b/scenarioA/services/my-account/GCKey/sign-up-step-4-fr.html
@@ -19,6 +19,7 @@
 <meta name="dcterms.subject" title="scheme" content="Electronic government; Government Services" />
 <meta name="dcterms.language" title="ISO639-2" content="eng" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="https://clegc-gckey.gc.ca/j/css/fuelux.min.css">
 <!--[if gte IE 9 | !IE ]><!-->
 <link rel="shortcut icon" href="https://clegc-gckey.gc.ca/j/wet/assets/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" href="https://clegc-gckey.gc.ca/j/wet/css/wet-boew.min.css" />
