--- a/scenarioA/services/my-account/R&A/create-my-profile-fr.html
+++ b/scenarioA/services/my-account/R&A/create-my-profile-fr.html
@@ -491,7 +491,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 	            <script type="text/javascript">
 	                var secondarymenu = document.getElementById("wb-sec");
 	                secondarymenu.innerHTML = wet.builder.secmenu(
-	                    {"sections":[{"sectionName":"Menu","menuLinks":[{"href":"###","text":"Help"},{"href":"###","text":"Frequently asked questions (FAQs)"},{"href":"###","text":"ROE Web Terms and Conditions"},{"href":"###","text":"Log Out"}]}]}
+	                    {"sections":[{"sectionName":"Menu","menuLinks":[{"href":"###","text":"Aide"},{"href":"###","text":"Foire aux questions (FAQ)"},{"href":"###","text":"Fermer la session"}]}]}
 	                );
 	            </script>	
              </div>
@@ -532,17 +532,17 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
             </ul>
           </nav>
           <div class="col-xs-6 visible-sm visible-xs tofpg"> <a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a> </div>
-          <div class="col-xs-6 col-md-2 text-right"> <img src="/etc/designs/canada/wet-boew/assets/wmms-blk.svg" alt="Symbol of the Government of Canada"/> </div>
+          <div class="col-xs-6 col-md-2 text-right"> <img src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg" alt="Symbol of the Government of Canada"/> </div>
         </div>
       </div>
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="/etc/clientlibs/granite/jquery.min.js"></script> 
-<script type="text/javascript" src="/etc/clientlibs/granite/utils.min.js"></script> 
-<script type="text/javascript" src="/etc/designs/canada/clientlib-publish.min.js"></script> 
+<script type="text/javascript" src="https://www.canada.ca/etc/clientlibs/granite/jquery.min.js"></script> 
+<script type="text/javascript" src="https://www.canada.ca/etc/clientlibs/granite/utils.min.js"></script> 
+<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/clientlib-publish.min.js"></script> 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
-<script src="/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script> 
-<script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script> 
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 </body>
 </html>
