--- a/scenarioA/services/my-account/chooser-page-fr.html
+++ b/scenarioA/services/my-account/chooser-page-fr.html
@@ -427,7 +427,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
                     </div>
                     <div class="gc-rprt-prblm-thnk gc-rprt-prblm-tggl hide">
                       <h3>Thank you for your help!</h3>
-                      <p>You will not receive a reply. For enquiries,&nbsp;<a href="https://www.canada.ca/en/contact/index.html">contact us</a>.</p>
+                      <p>You will not receive a reply. For enquiries,&nbsp;<a href="#">contact us</a>.</p>
                     </div>
                   </div>
                 </div>
@@ -481,17 +481,17 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
             </ul>
           </nav>
           <div class="col-xs-6 visible-sm visible-xs tofpg"> <a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a> </div>
-          <div class="col-xs-6 col-md-2 text-right"> <img src="/etc/designs/canada/wet-boew/assets/wmms-blk.svg" alt="Symbol of the Government of Canada"/> </div>
+          <div class="col-xs-6 col-md-2 text-right"> <img src="https://www.ccanada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg" alt="Symbol of the Government of Canada"/> </div>
         </div>
       </div>
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="/etc/clientlibs/granite/jquery.min.js"></script> 
-<script type="text/javascript" src="/etc/clientlibs/granite/utils.min.js"></script> 
-<script type="text/javascript" src="/etc/designs/canada/clientlib-publish.min.js"></script> 
+<script type="text/javascript" src="https://www.ccanada.ca/etc/clientlibs/granite/jquery.min.js"></script> 
+<script type="text/javascript" src="https://www.ccanada.ca/etc/clientlibs/granite/utils.min.js"></script> 
+<script type="text/javascript" src="https://www.ccanada.ca/etc/designs/canada/clientlib-publish.min.js"></script> 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
-<script src="/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script> 
-<script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
+<script src="https://www.ccanada.ca/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script> 
+<script src="https://www.ccanada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 </body>
 </html>
