--- a/scenarioA/services/my-account/pac/pac-form.html
+++ b/scenarioA/services/my-account/pac/pac-form.html
@@ -212,18 +212,20 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
  <div class="well">
 	 <p><strong>I am a Canadian resident</strong></p>
 	 <div class="row mrgn-tp-md">
+		 <div class="row">
                         <div class="col-md-5">
                             <label for="urnROE" class="control-label">Postal Code : (example: K1A2B3)</label>
-</div>
+			 </div></div><div class="row">
 <div class="col-md-4">
 <input type="text" id="urnROE" name="urnROE" class="form-control" value="" maxlength="100" size="option2RoeUrnP option2RoeUrnExample" autocomplete="off"/>
 
 
        </div>
-                        
+		 </div>            
     </div>
 	<hr />
 	 <p><strong>I am a foreign resident</strong></p>
+	 <div class="row">
 	 <div class="col-md-4">
 <div class="form-group">
 <label for="dt_corecategory">Country:</label>
@@ -243,7 +245,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 </select>
 </div>
 </div>
-
+	 </div>
 	
 	
   <div class="col-sm-4 col-md-3 col-sm-offset-2 col-md-offset-4 col-lg-offset-5">
