--- a/scenarioA/services/my-account/MSCA/EI/self-employed.html
+++ b/scenarioA/services/my-account/MSCA/EI/self-employed.html
@@ -149,23 +149,20 @@
 <section class="container"> <a class="btn btn-default" href="#" role="button">Featured services</a> <a class="btn btn-default" href="#" role="button">Help</a></section>
 <main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
   <h1 property="name" id="wb-cont">My Current Status</h1>
-  </div>
-  </div>
-  </div>
-  </div>
-  <br />
+ 
   <p>You currently have an agreement with the Canada Employment Insurance (EI) Commission to participate in the EI program for access to EI special benefits for self-employed people. As a result of this agreement, you may be eligible for certain types of <a href="">EI benefits</a>.</p>
   <p><em><u>If you wish to end your agreement, select the Continue button below.</u></em></p>
   <button type="button" class="btn btn-primary">Continue</button>
   <button type="button" class="btn btn-danger">Cancel</button>
   <button type="button" class="btn btn-default">Print</button>
-  <p><strong>- OR - If client does not have an agreement</strong></p>
+  <!--<p><strong>- OR - If client does not have an agreement</strong></p>
   <p>You currently do not have an agreement with the Canada Employment Insurance (EI) Commission to participate in the EI program for access to EI special benefits for self-employed people.  You can obtain more information using the help link above.</p>
   <p><u>When you are ready to enter into an agreement, please select the Continue button below</u>.</p>
   <button type="button" class="btn btn-primary">Continue</button>
   <button type="button" class="btn btn-danger">Cancel</button>
-  <button type="button" class="btn btn-default">Print</button>
-  <p><strong>- OR -</strong></p>
+  <button type="button" class="btn btn-default">Print</button>-->
+
+ <!-- <p><strong>- OR -</strong></p>
   <p><strong>If client already has an agreement or ended an agreement, he will also see the history section below. Note that if the client has an agreement, the table below will begin win "Started". And if the client ended an agreement, the table below will begin with " Terminated".</strong></p>
   <p><strong>History</strong></p>
   <table>
@@ -187,7 +184,7 @@
       <td>YYYY-MM-DD</td>
       <td>HOLMAN</td>
     </tr>
-  </table>
+  </table>-->
   <br />
   <section> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html">Return to Employment Insurance main menu</a><br>
   </section>
