--- a/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html
@@ -152,7 +152,7 @@
   </header>
 </div>
 
-	<section class="container">
+<section class="container">
   <a class="btn btn-default" href="#" role="button">Featured services</a>
   <a class="btn btn-default" href="#" role="button">Help</a></section>
 	
@@ -161,19 +161,11 @@
 
   
 							<h1 property="name" id="wb-cont">Mistakes can happen</h1>    
-       </div>
-      </div>
-    </div>
-  </div>
-  <br />
+    
 	 
-   <p>We realize that mistakes can happen. If you make a mistake filling out forms or reports, or if there is a change in your circumstances that could affect your EI benefits, advise Service Canada immediately.</p>
-   <p><strong>Letting us know of a mistake or a change early is your best way to prevent future problems with your claim, or avoid a penalty or prosecution.</strong></p>
-   <p>To let us know of a mistake or a change:</p>
-   <ul>
-   <li>call us at <strong>1-800-206-7218</strong>, from 8:30 am to 4:30 pm local time, and press "0" to speak to a representative; or</li>
-   <li><a href="###">write or go to your nearest Service Canada Centre</a></li>
-   </ul><br>
+   <p>We realize that mistakes can  happen. If you make a mistake filling out forms or reports, or if there is a  change in your circumstances that could affect your EI benefits, advise Service  Canada immediately. Letting us know of a mistake or a change early is your best  way to prevent future problems with your claim, or avoid a penalty or  prosecution.<br>
+To make a voluntary disclosure,  call our telephone information service at <strong>1-800-206-7218</strong>, from 8:30 am to 4:30 pm, and press  &quot;0&quot; to speak to a representative. You can also write or go to your  Service Canada Centre.</p>
+<br>
    
 	   <p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
    
@@ -187,8 +179,8 @@
 					showShare: false
 				});</script></main>
 <span id="pageTemplate:pt_dc_def_pagefooter:pt_pg_def_pagefooter" class="af_panelGroupLayout"></span></span>
-                <div id="def-bottom"></div>
-                <script type="text/javascript">var defBottom = document.getElementById("def-bottom");
+<div id="def-bottom"></div>
+<script type="text/javascript">var defBottom = document.getElementById("def-bottom");
 				defBottom.outerHTML = wet.builder.footer({
 					cdnEnv : "prod",
 					showFeatures: false,termsLink: [ {href: "https://srv241-s2.lab.hrdc-drhc.gc.ca/ecas-seca/rascl/SCL/TC.aspx?mode=ReadOnly&lang=eng" } ],contactLinks: [ { href: "http://www.servicecanada.gc.ca/cgi-bin/op-so/msca/redirection.asp?linkmsca=/2e.html" } ],privacyLink: [],
@@ -209,7 +201,7 @@
 						"logouturl" : "https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/logout",
 						"refreshCallbackUrl": "https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/faces/oracle/webcenter/portalapp/pages/session-refresh.jspx",
 						"refreshOnClick" : false }'></span> 
-                <script type="text/javascript">_satellite.pageBottom();</script></span>
+<script type="text/javascript">_satellite.pageBottom();</script></span>
 <div id="document::msgCtr" style="display:none">
                   <div id="document::msgDlg" class="af_dialog">
     <div class="af_dialog_inactive-background" _afrPanelWindowBackground="1"></div>
@@ -247,11 +239,11 @@
       </tr>
                     </table>
   </div>
-                </div>
+</div>
 <span id="document::iconC" style="display:none"><span id="af_messages::info-icon"><img src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/info.png" width="16" height="16" border="0" title="Information" alt="Information"></span><span id="af_message::warning-icon"><img src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/warning.png" width="16" height="16" border="0" title="Warning" alt="Warning"></span><span id="af_messages::fatal-icon"><img src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/error.png" width="16" height="16" border="0" title="Critical Error" alt="Critical Error"></span><span id="af_message::info-icon"><img src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/info.png" width="16" height="16" border="0" title="Information" alt="Information"></span><span id="af_message::fatal-icon"><img src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/error.png" width="16" height="16" border="0" title="Critical Error" alt="Critical Error"></span><span id="af_messages::warning-icon"><img src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/warning.png" width="16" height="16" border="0" title="Warning" alt="Warning"></span><span id="af_message::confirmation-icon"><img src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/confirmation.png" width="16" height="16" border="0" title="Confirmation" alt="Confirmation"></span><span id="af_message::error-icon"><img src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/error.png" width="16" height="16" border="0" title="Error" alt="Error"></span><span id="af_messages::error-icon"><img src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/error.png" width="16" height="16" border="0" title="Error" alt="Error"></span><span id="af_messages::confirmation-icon"><img src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/confirmation.png" width="16" height="16" border="0" title="Confirmation" alt="Confirmation"></span></span>
 <div id="afr::DlgSrvPopupCtnr">
                   <div id="afr::DlgSrvPopupCtnr::content" style="display:none"></div>
-                </div>
+</div>
 <DIV id="afr::UtilPopupCtnr" _pid="j_id38" _did="j_id39" style="display:none">
                   <div id="j_id38" style="display:none">
     <div style="top:auto;right:auto;left:auto;bottom:auto;width:auto;height:auto;position:relative;" id="j_id38::content">
@@ -292,7 +284,7 @@
       </div>
                     </div>
   </div>
-                </DIV>
+</DIV>
 </div>
 <script type="text/javascript">AdfBootstrap._onLoad=function (){if (AdfPage.PAGE.__checkRichResponseDirty()) return;var isCachedPage = false;if (!isCachedPage){window.name='jtuuy02hd';};AdfAgent.AGENT.elementsAdded(document);AdfDhtmlLookAndFeel.addSkinProperties({"af|dialog-tr-open-animation-duration":"300","af|messages::summary":"af_messages_summary","AFPopupSelectorFooterStart":"AFPopupSelectorFooterStart","af|message::container":"af_message_container","AFPopupSelectorContentEnd":"AFPopupSelectorContentEnd","af|message::detail-cell":"af_message_detail-cell","AFPopupSelectorContent":"AFPopupSelectorContent","af|messages::message-group-list":"af_messages_message-group-list","af|message::component-messages-list-container":"af_message_component-messages-list-container","af|dialog::resize-ghost":"af_dialog_resize-ghost","AFPopupSelectorFooterEnd":"AFPopupSelectorFooterEnd","af|messages::intro":"af_messages_intro",".AFPopupSelector-tr-animate":"true","af|popup-tr-shadow-starting-black-percent":100,"AFPopupSelector":"AFPopupSelector",".AFWorkaround-tr-disable-property-delta-sync":"false","af|popup-tr-shadow-pixel-size":4,"af|messages::message-group-type-separator":"af_messages_message-group-type-separator","af|messages::message-group-title":"af_messages_message-group-title","af|message::message-list-component":"af_message_message-list-component","af|message::intro":"af_message_intro","af|popup-tr-shadow-offset":3,"AFPopupSelectorHeader":"AFPopupSelectorHeader","af|messages::detail":"af_messages_detail","af|message::type":"af_message_type","AFPopupSelectorHeaderStart":"AFPopupSelectorHeaderStart","af|message::detail":"af_message_detail","af|messages::header-text":"af_messages_header-text",".AFNoteWindow-tr-open-animation-duration":"200","af|message::icon-cell":"af_message_icon-cell","AFPopupSelectorContentStart":"AFPopupSelectorContentStart","AFPopupSelectorFooter":"AFPopupSelectorFooter","af|messages::message-list-page":"af_messages_message-list-page","AFPopupSelectorHeaderEnd":"AFPopupSelectorHeaderEnd",".AFNoteWindow-tr-animate":"true","af|messages::component-link":"af_messages_component-link",".AFPopupSelector-tr-open-animation-duration":"200","af|dialog-tr-animate":"true","af|message::summary":"af_message_summary"});AdfPage.PAGE.addComponents(new AdfRichDocument('document',{'title':'My Service Canada Account - Home'}),new AdfRichDialog('document::msgDlg',{'okVisible':false,'cancelVisible':false,'cancelTextAndAccessKey':'OK','modal':false,'resize':'on','title':''}),new AdfDialogServicePopupContainer('afr::DlgSrvPopupCtnr'),new AdfRichPopup('j_id38',{'contentDelivery':'immediate'}),new AdfRichDialog('j_id39',{'okVisible':false,'cancelVisible':false,'closeIconVisible':false}));AdfPage.PAGE.setDefaultMessageHandlerComponentId("document");AdfPage.PAGE.__initUserInactivityTimeout(600000);page.__setCssSelectorsUncompressed(true);AdfPage.PAGE.__setViewId('/oracle/webcenter/portalapp/pages/home.jspx');var exScripts=AdfBootstrap._extendedScripts;for (var i=0;i<exScripts.length;i++){exScripts[i]()};AdfBootstrap._extendedScripts=null;AdfPage.PAGE.__onLoad();};window.onload=AdfBootstrap._onLoad;</script><script type="text/javascript">AdfBootstrap._extendedScripts=[];</script>
 </body>
