--- a/scenarioA/services/my-account/MSCA/EI/self-employed-fr.html
+++ b/scenarioA/services/my-account/MSCA/EI/self-employed-fr.html
@@ -279,7 +279,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     </tr>
   </table>-->
   <br />
-  <section> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html">Return to Employment Insurance main menu</a><br>
+  <section> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html">Retour au menu principal de l'assurance-emploi
+</a><br>
   </section>
   <br />
   </span> 
