--- a/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit-fr.html
+++ b/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit-fr.html
@@ -276,7 +276,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 <button type="button" class="btn btn-default">Modifier</button>-->
  
-<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
+<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html">Retour au menu principal de l'assurance-emploi
+</a></p>
    
 
 
