--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -189,7 +189,7 @@
       <!-- List group -->
       <ul>
         <li> If you do not receive email alerts when new important EI information is available in your My Service Canada Account, you can select "Register for Alert Me" from the left-hand menu to register now! </li>
-        <li> <em>View my status and correspondence</em> is a new feature introduced in November 2016. If you had a claim that was started prior to this date, you may have to select <a href="">View my latest claim details</a> to find additional information on your latest claim. </li>
+        <li> <em>View my status and correspondence</em> is a new feature introduced in November 2016. If you had a claim that was started prior to this date, you may have to select <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html">View my latest claim details</a> to find additional information on your latest claim. </li>
         <li> You can select <a href="">Help</a> for additional website information. </li>
       </ul>
     </div>
@@ -201,9 +201,9 @@
         <summary class="wb-toggle tgl-tab well-sm" data-toggle='{"parent": ".accordion", "group": ".acc-group", "state": "on"}'>2018-11-30 - Decision Made <br>
           Claim Finalized</summary>
         <div class="tgl-panel">
-          <p>We have finalized your claim for Employment Insurance benefits. You can <a href="">view your latest claim information here</a>.</p>
+          <p>We have finalized your claim for Employment Insurance benefits. You can <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html">view your latest claim information here</a>.</p>
           <br>
-          <p>If you are required to submit reports, visit <a href="">Internet Reporting Service</a> to complete your reports.</p>
+          <p>If you are required to submit reports, visit <a href="#">Internet Reporting Service</a> to complete your reports.</p>
         </div>
       </details>
       
