--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
@@ -146,7 +146,7 @@
   </header>
 </div>
 <section class="container">
-<h1 property="name" id="wb-cont" dir="ltr">Report updates to EI claim</h1>
+<h1 property="name" id="wb-cont" dir="ltr">eForms</h1>
   <a class="btn btn-default" href="#" role="button">Featured services</a>
   <a class="btn btn-default" href="#" role="button">Help</a><br>
   
