--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS-fr.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS-fr.html
@@ -299,7 +299,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		   <p><br>
 		     <br>
         </p>
-		<center><button type="button" class="btn btn-primary">Continuer</button></center>
+		<center><button type="button" class="btn btn-primary" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-fr.html">Continuer</button></center>
 	  </div>
 	</section>
   
