--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS-fr.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS-fr.html
@@ -296,10 +296,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		   <p>Votre participation est volontaire. Cependant, le refus de fournir des renseignements ou faire une déclaration fausse ou trompeuse pourrait occasionner le retard, la perte de vos prestations et/ou des amendes et des pénalités.</p>
 		   <p>Les renseignements sont administrés en conformité avec les sections 48, 49 et 50 de la Loi sur l&rsquo;assurance-emploi, la Loi sur la protection des renseignements personnels et la Loi sur le MRHDC. Vous avez droit à la protection, à l&rsquo;accès et à la correction de vos renseignements personnels. Vos renseignements seront décrits dans le fichier de renseignements personnels : Prestations d&rsquo;assurance-emploi RHDCC PPU 705 (en cours d&rsquo;élaboration) et utilisés et divulgués conformément aux conditions établies.</p>
 		   <p>La marche à suivre pour présenter une demande officielle de renseignements personnels est décrite dans la publication fédérale Info Source, accessible sur le site Web <a href="#">http://www.infosource.gc.ca</a>. Vous pouvez également consulter Info Service en ligne dans tous les Centres Service Canada.</p>
-		   <p><br>
-		     <br>
-        </p>
-		<center><button type="button" class="btn btn-primary" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-fr.html">Continuer</button></center>
+		   
+		<center><button type="button" class="btn btn-primary"><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-fr.html">Continuer</a></button></center>
 	  </div>
 	</section>
   
