--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -274,7 +274,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="" rel="external">Faire appel d'une décision de l'a.-e.</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="" rel="external">Remplir d'autres formulaires d'a.-e.</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="" rel="external">Trouver un emploi sur Guichet emplois</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
-          <li class="list-group-item"><a href="">Publications de l'a.-e</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Publications de l'a.-e.</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
 		  <li class="list-group-item"><a href="">Faire une demande de passeport</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Contactez-nous</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
         </ul>
