--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -355,7 +355,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-address.html';" type="button" class="btn btn-default">Adresse</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-telephone.html';" type="button" class="btn btn-default">Numéro de téléphone</button></li>
-         <li class="mrgn-bttm-sm"> <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html';" type="button" class="btn btn-default">Dépot direct (RPC/SV)</button></li>
+         <li class="mrgn-bttm-sm"> <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html';" type="button" class="btn btn-default">Dépôt direct (RPC/SV)</button></li>
 		  </ul>
         </div>
       </div>
