--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement-fr.html
@@ -319,7 +319,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
    <h5 class="panel-title">Adresse domiciliaire:</h5>
   </header> 	 
 <div class="panel-body">
-	  <p>111 STREET NAME</p><p>CITY</p><br><p>PROVINCE 1A1A1A</p>
+	  <p>111 STREET NAME<br />
+		  CITY<br />
+		  PROVINCE 1A1A1A</p>
 		
  	  <button type="button" class="btn btn-primary">Modifier</button>
   </div>
@@ -360,8 +362,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
  	  <button type="button" class="btn btn-primary">Demande la clause pour élever des enfants</button>
   </div>
 </section>	
-	 <button type="button" class="btn btn-primary">Confirm</button>
-	<button type="button" class="btn btn-default">Cancel</button><br><br>
+	 <button type="button" class="btn btn-primary">Continuer</button>
+	<button type="button" class="btn btn-default">Annuler</button><br><br>
 	<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au menu principal de l'assurance-emploi
 </a><br><br>
 	
