--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
@@ -149,9 +149,9 @@
 	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
 	
 	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
-<h1 property="name" id="wb-cont" dir="ltr">My child-rearing provision - Confirm information</h1>
+<h1 property="name" id="wb-cont" dir="ltr">My child-rearing provision information</h1>
   
-<p>Please check the information you entered is accurate, then submit your request.</p>	
+<p>Your file shows that you gave the following information for your child-rearing provision.</p>	
 
 <section class="panel panel-info">
   <div class="panel-body">
@@ -161,10 +161,10 @@
     <th>Name:</th>
     <td>CHILD'S NAME</td>
   </tr>
-  <tr>
+  <!--<tr>
     <th>SIN:</th>
     <td>*** *** 789</td>
-  </tr>
+  </tr>-->
   <tr>
     <th>Date of birth:</th>
     <td>1968-11-13</td>
@@ -175,9 +175,9 @@
 </section><br>
 	</div>
 	
-	
+	<p>If any of this information is incorrect, contact us to make sure that your benefits are accurate.</p>
 
-<a class="btn btn-primary" href="###">Add another child</a><br><br>
+<!--<a class="btn btn-primary" href="###">Add another child</a><br><br>
 
 <p>To apply for the child rearing provision through this online service, you are certifying that all of the following conditions are met for the child(ren) listed above:</p>
 <ul>
@@ -210,9 +210,9 @@
 
 <span class="label label-warning">[The following screen (SBT J 004) should only be displayed when the client is requesting CRP using the standalone application from the MSCA main menu]</span><br>
 <a class="btn btn-primary" style="margin-left:0px; margin-top:10px; margin-bottom:10px; margin-right:10px;" href="###">Continue</a>
-<a class="btn btn-default" style="margin-left:0px; margin-top:10px; margin-bottom:10px; margin-right:10px;" href="###">Cancel</a><br>
+<a class="btn btn-default" style="margin-left:0px; margin-top:10px; margin-bottom:10px; margin-right:10px;" href="###">Cancel</a><br>-->
 
-<a href="#">Return to Canada Pension Plan/Old Age Security</a><br><br>
+<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Return to Canada Pension Plan/Old Age Security</a></p><br><br>
 	
 	
 </section>
